Remove some 16bits conversion. https://bugs.webkit.org/show_bug.cgi?id=116935

Patch by Benjamin Poulain <bpoulain@apple.com> on 2013-05-30
Reviewed by Darin Adler.

Merge chromium ce35a544d09e6cb907457535340eb0e9984e57b8.
https://chromium.googlesource.com/chromium/blink/+/ce35a544d09e6cb907457535340eb0e9984e57b8

* html/parser/InputStreamPreprocessor.h:
* platform/FileSystem.cpp:
(WebCore::encodeForFileName):


Canonical link: https://commits.webkit.org/135308@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@150985 268f45cc-cd09-0410-ab3c-d52691b4dbfc